# door-monitoring

./: CMakeLists.txt  README.md  prj.conf
boards/: blackpill_f411ce.overlay
config/: blackpill_debug_probe.cfg  sensors_config.h
include/application/: door_monitoring.h
include/lib/: door_state_machine.h  door_state_manager.h
include/sensors/: ambient_light_sensor.h  distance_sensor.h  motion_sensor.h
src/: main.c
src/application/: CMakeLists.txt  door_monitoring.c
src/lib/door_state_machine/: door_state_machine.c
src/lib/door_state_manager/: door_state_manager.c
src/sensors/ambient_light/: opt4003dnprq1.c
src/sensors/ambient_light_sensor/: opt4003dnprq1.c  opt4003dnprq1.h
src/sensors/distance_sensor/: vl53l3cx.c  vl53l3cx.h
src/sensors/motion_sensor/: lis2dw12tr.c  lis2dw12tr.h
